--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,6 +18,9 @@
 @import "custom/buttons";
 @import "custom/loader";
 @import "custom/notify";
+@import "custom/selectable";
+@import "custom/icons";
+@import "custom/utilities/flex";
 
 
 
