--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,7 +13,7 @@
 @import "bootstrap/reboot";
 @import "bootstrap/type";
 @import "bootstrap/images";
-// @import "bootstrap/code";
+@import "bootstrap/code";
 @import "bootstrap/grid";
 // @import "bootstrap/tables";
 @import "bootstrap/forms";
@@ -36,7 +36,7 @@
 @import "bootstrap/list-group";
 // @import "bootstrap/close";
 // @import "bootstrap/toasts";
-// @import "bootstrap/modal";
+@import "bootstrap/modal";
 // @import "bootstrap/tooltip";
 // @import "bootstrap/popover";
 // @import "bootstrap/carousel";
