--- a/sass/main.scss
+++ b/sass/main.scss
@@ -34,10 +34,10 @@
 // @import "bootstrap/progress";
 // @import "bootstrap/media";
 @import "bootstrap/list-group";
-// @import "bootstrap/close";
+@import "bootstrap/close";
 // @import "bootstrap/toasts";
 @import "bootstrap/modal";
-// @import "bootstrap/tooltip";
+@import "bootstrap/tooltip";
 // @import "bootstrap/popover";
 // @import "bootstrap/carousel";
 // @import "bootstrap/spinners";
