--- a/sass/custom/_sections.scss
+++ b/sass/custom/_sections.scss
@@ -12,6 +12,10 @@ section {
     padding: 6rem 0;
 }
 
+.section-demo-zone {
+    background: $white;
+    box-shadow: $box-shadow;
+}
 .sect-preview {
     position: relative;
     a {
