--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,6 +20,9 @@
 @import "custom/notify";
 @import "custom/selectable";
 @import "custom/icons";
+@import "custom/animation";
+
+
 @import "custom/utilities/flex";
 
 
