--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -18,6 +18,12 @@
 @import "custom/buttons";
 @import "custom/loader";
 @import "custom/notify";
+@import "custom/selectable";
+@import "custom/icons";
+@import "custom/animation";
+
+
+@import "custom/utilities/flex";
 
 
 
