--- a/app/sass/custom/_notify.scss
+++ b/app/sass/custom/_notify.scss
@@ -1,6 +1,7 @@
 .notifyjs-bootstrap-branded {
 	background: lighten($primary, 45%) !important;
 	background:$white !important;
+	border-color:$primary !important;
 	
 	color:$primary !important;
 	box-shadow: $box-shadow-sm;
